flux/self-made/yaoae/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yaoae
  namespace: self-made
  labels:
    app: yaoae
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yaoae
  template:
    metadata:
      labels:
        app: yaoae
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      volumes:
      - name: tmp
        emptyDir:
          medium: Memory
      containers:
      - name: auth
        image: ghcr.io/sverdlovsky/yaoae:latest
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        args:
        - "--host"
        - "::"
        - "--port"
        - "8080"
        - "--forwarded-allow-ips"
        - "*"
        - "--proxy-headers"
        ports:
        - name: auth
          containerPort: 8080
        resources:
          requests:
            cpu: 0.1
            memory: 64Mi
            ephemeral-storage: 128Mi
          limits:
            cpu: 4
            memory: 256Mi
            ephemeral-storage: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
